refactor: arduino listener feat: holiday
